Bug 1221913 - Make swiping work correctly in e10s mode even if APZ is off. r=kats

--HG--
extra : commitid : 6jMrb8f9Atw
extra : amend_source : 6cffb6ab209c3f55739ddb409b1a4d04d31a159a